--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,10 @@ micronaut:
     name: carrosGrpc
 datasources:
   default:
-    url: jdbc:mysql://localhost:3306/db
+    url: ${DB_URL:`jdbc:mysql://localhost:3306/carros_grpc?createDatabaseIfNotExist=true`}
     driverClassName: com.mysql.cj.jdbc.Driver
-    username: root
-    password: ''
+    username: ${DB_USER:root}
+    password: ${DB_PASSWORD:diasz}
     schema-generate: CREATE_DROP
     dialect: MYSQL
 jpa.default.properties.hibernate.hbm2ddl.auto: update
